ore attempts to debug githubaction only bug with building curl with clang++

--- a/ThirdPartyComponents/curl/Makefile
+++ b/ThirdPartyComponents/curl/Makefile
@@ -212,10 +212,10 @@ endif
 # See `config.log' for more details
 
 ## --LGP 2024-03-17 - failing on github actions only
-LIBCURL_CONFIGURE += --without-zlib
-LIBCURL_CONFIGURE += --without-ssl
-LIBCURL_CONFIGURE += --without-brotli
-LIBCURL_CONFIGURE += --without-zstd  
+# LIBCURL_CONFIGURE += --without-zlib
+# LIBCURL_CONFIGURE += --without-ssl
+# LIBCURL_CONFIGURE += --without-brotli
+# LIBCURL_CONFIGURE += --without-zstd  
 
 
 ifeq ($(DETECTED_HOST_OS), Darwin)
