--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -79,20 +79,20 @@ jobs:
           grep processor /proc/cpuinfo | wc -l
           grep MemTotal /proc/meminfo
           df -h
-      # - name: Hacks 2 Save Space
-      #   run: |
-      #     df -h
-      #     #du -hs /* || true
-      #     #du -hs /usr/* || true
-      #     #du -hs /usr/share/* || true
-      #     #du -hs /__w/* || true
-      #     echo Deleting:
-      #     du -hs /usr/share/doc /usr/share/doc-base /usr/share/icons /usr/share/javascript /usr/share/fonts-droid-fallback /usr/share/X11 || true
-      #     du -hs Archive .git
-      #     rm -r /usr/share/doc /usr/share/doc-base /usr/share/icons /usr/share/javascript /usr/share/fonts-droid-fallback /usr/share/X11 || echo "Issue deleting incomplete"
-      #     rm -rf Archive .git || echo "Issue deleting incomplete"
-      #     #ls -la .
-      #     df -h
+      - name: Hacks 2 Save Space
+        run: |
+          df -h
+          #du -hs /* || true
+          #du -hs /usr/* || true
+          #du -hs /usr/share/* || true
+          #du -hs /__w/* || true
+          echo Deleting:
+          du -hs /usr/share/doc /usr/share/doc-base /usr/share/icons /usr/share/javascript /usr/share/fonts-droid-fallback /usr/share/X11 || true
+          du -hs Archive .git
+          rm -r /usr/share/doc /usr/share/doc-base /usr/share/icons /usr/share/javascript /usr/share/fonts-droid-fallback /usr/share/X11 || echo "Issue deleting incomplete"
+          rm -rf Archive .git || echo "Issue deleting incomplete"
+          #ls -la .
+          df -h
       - name: Configure ${{ matrix.config_name }}
         run: |
           ./configure ${{ matrix.config_name }} --compiler-driver ${{ matrix.compiler }} ${{ matrix.extra_config_args }} --cppstd-version ${{ matrix.cpp_version }}
