--- a/ThirdPartyComponents/libxml2/Makefile
+++ b/ThirdPartyComponents/libxml2/Makefile
@@ -20,7 +20,8 @@ endif
 #
 # CHECK FOR UPDATED VERSIONS https://github.com/GNOME/libxml2/tags
 #
-libxml2_VERSION_:=2.12.5
+libxml2_VERSION_:=2.12.6
+#libxml2_VERSION_:=2.12.5
 #libxml2_VERSION_=2.12.4
 #libxml2_VERSION_=2.12.3
 
