--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -113,10 +113,10 @@ jobs:
           du -hs Builds/*/* IntermediateFiles/*/*
           make --directory ThirdPartyComponents clean
           df -h
-          du -hs Builds/*/* IntermediateFiles/*/*
-          rm -f Builds/${{ matrix.config_name }}/ThirdPartyComponents/bin/*
+          du -hs Builds/*/* IntermediateFiles/*/* ThirdPartyComponents/Origs-Cache/
+          rm -f Builds/${{ matrix.config_name }}/ThirdPartyComponents/bin/* ThirdPartyComponents/Origs-Cache/
           df -h
-          du -hs Builds/*/* IntermediateFiles/*/*
+          du -hs Builds/*/* IntermediateFiles/*/* ThirdPartyComponents/*
       - name: Run Tests
         run: |
           make run-tests
