--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -111,7 +111,8 @@ jobs:
           echo "Before save space"
           df -h
           du -hs Builds/*/* IntermediateFiles/*/*
-          make --directory ThirdPartyComponents clean
+          make --directory Library --silent clean
+          make --directory ThirdPartyComponents --silent clean
           df -h
           du -hs Builds/*/* IntermediateFiles/*/* ThirdPartyComponents/Origs-Cache/
           rm -f Builds/${{ matrix.config_name }}/ThirdPartyComponents/bin/* ThirdPartyComponents/Origs-Cache/*
