on macos - copy out BUILD-CONF-TOOLS-OUT.txt to see why its failing

--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -222,6 +222,7 @@ jobs:
         if: always()
         run: |
           mkdir /tmp/LOGS-ARCHIVE
+          cp IntermediateFiles/${{ matrix.config_name }}/ThirdPartyComponents/curl/BUILD-CONF-TOOLS-OUT.txt /tmp/LOGS-ARCHIVE || :
           cp $TMPDIR/Trace*.txt /tmp/LOGS-ARCHIVE || :
       - name: DEBUG Workaround GitHub-Actions-MacOS Issue with env.TMPDIR
         if: always()
