--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -198,6 +198,8 @@ jobs:
         run: |
           brew install gnu-sed
           brew install p7zip
+          brew install autoconf
+          brew install libtool
           brew install automake
           brew install pkg-config
           make install-realpath
