for macos 14 need brew install libidn2 - gitbub actions

--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -200,6 +200,7 @@ jobs:
           brew install p7zip
           brew install autoconf
           brew install libtool
+          brew install libidn2
           brew install automake
           brew install pkg-config
           make install-realpath
