experimental fix to libid2n not found for macos14

--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -180,6 +180,8 @@ jobs:
     env:
       # vm has 2 virtual CPUs, but 8GB ram, so jobs=3 (empirical), and QUICK_BUILD avoids some internal testing
       MAKEFLAGS: "--jobs=3 QUICK_BUILD=1"
+      # EXPERIMENTAL FIX TO LIBIDB2 not found
+      LIBRARY_PATH: "/opt/homebrew/lib"
     steps:
       - uses: maxim-lobanov/setup-xcode@v1
         with:
