clang14/15 dont work with boost cobalt

--- a/ThirdPartyComponents/boost/Makefile
+++ b/ThirdPartyComponents/boost/Makefile
@@ -232,8 +232,11 @@ B2_CONFIGURATION_ARGS +=	--without-wave
 # At least fails on build-n-test-Linux (Linux, ubuntu-22.04-clang++-15-debug-libc++-c++23, clang++-15, ubuntu-latest,... 
 # and build-n-test-MacOS (MacOS, MacOS-13-XCode-14.3-Debug, macos-13, 14.3, Debug, --apply-default-debu...
 #		--LGP 2023-12-15
-ifeq ($(VERSION),1_84_0)
 ifeq (clang,$(findstring clang,$(CXX)))
+ifeq ($(VERSION),1_84_0)
+B2_CONFIGURATION_ARGS +=	--without-cobalt
+endif
+ifeq ($(VERSION),1_85_0)
 B2_CONFIGURATION_ARGS +=	--without-cobalt
 endif
 endif
