fix other docker contianers to also print hello message about Getting started

--- a/DockerBuildContainers/Ubuntu2310-Small/Dockerfile
+++ b/DockerBuildContainers/Ubuntu2310-Small/Dockerfile
@@ -46,5 +46,6 @@ RUN apt-get -qq install -y g++
 RUN apt-get -qq install -y libasan5 libasan6 libubsan1
 
 COPY Shared-Files/Getting-Started-With-Stroika.md ./
+COPY Ubuntu2310-Small/.bash_profile /root
 
-CMD /bin/bash
+CMD /bin/bash -l
