maybe fix regression in dockerfile

--- a/DockerBuildContainers/Windows-MSYS/Dockerfile
+++ b/DockerBuildContainers/Windows-MSYS/Dockerfile
@@ -89,6 +89,7 @@ RUN  \
 
 # Install a bunch of components - mostly that Stroika builds will find handy
 # xxd for 'resource' strategy (currently just in Tests - as of 2023-12-16) - weirdly in vim package
+SHELL ["cmd", "/S", "/C"]
 RUN \
     pacman --noconfirm -S base-devel git unzip p7zip doxygen mingw-w64-x86_64-jq vim && \
     pacman --noconfirm -Syuu
