--- a/DockerBuildContainers/Windows-MSYS/Dockerfile
+++ b/DockerBuildContainers/Windows-MSYS/Dockerfile
@@ -91,10 +91,12 @@ RUN  \
 
 # Install a bunch of components - mostly that Stroika builds will find handy
 # xxd for 'resource' strategy (currently just in Tests - as of 2023-12-16) - weirdly in vim package
-SHELL ["cmd", "/S", "/C"]
+# SHELL ["cmd", "/S", "/C"]
+SHELL ["powershell"]
 RUN \
-    pacman --noconfirm -S base-devel git unzip p7zip doxygen mingw-w64-x86_64-jq vim && \
-    pacman --noconfirm -Syuu
+    function msys() { C:\msys64\usr\bin\bash.exe @('-lc') + @Args; } \
+    msys 'pacman --noconfirm -S base-devel git unzip p7zip doxygen mingw-w64-x86_64-jq vim'; \
+    msys 'pacman --noconfirm -Syuu'
 
 COPY Windows-MSYS/Getting-Started-With-Stroika.md $MSYS_DIR/home/
 COPY Windows-MSYS/.bash_profile $MSYS_DIR/home/
